Add progress storage, change icon, create package

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -30,10 +30,11 @@
     <script src="..\js\popup.js"></script>
   </head>
   <body>
-    <div id="status">Status</div>
-    <input id="answer_text"></input>
-    <div></div>
-    <button type="button" id="submit_button">Submit</button>
+      <button type="button" id="restore_button">Open Zahada</button>
+      <div id="status">Status</div>
+      <input id="answer_text"></input>
+      <div></div>
+      <button type="button" id="submit_button">Submit</button>
   </body>
 </html>
 
